--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/appsettings.json
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Project_Ceustermans_Robin-83E62901-6A03-46D6-89F5-5670C592ED98;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"HelloCoreConnection": "Server=.\\sqlserver2017;Database=EfCoreHBO5;Trusted_Connection=True",
+    "LocalDBConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Project_Ceustermans_Robin-83E62901-6A03-46D6-89F5-5670C592ED98;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
