--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/appsettings.json
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     //"HelloCoreConnection": "Server=.\\sqlserver2017;Database=EfCoreHBO5;Trusted_Connection=True",
-    "LocalDBConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Project_Ceustermans_Robin-83E62901-6A03-46D6-89F5-5670C592ED98;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LocalDBConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Project_Ceustermans_Robin-83E62901-6A03-46D6-89F5-5670C592ED98;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "projectConnection": "Server=baker.local.thomasmore.be\\GSQLEDU01,45001;Database=r0666177;Trusted_Connection=False;User Id=r0666177;Password=Test123"
   },
   "Logging": {
     "LogLevel": {
